Implemented full Google Drive backup function Adapted required permissions in AndroidManifest.xml
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@5 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="consumption_text">Durchschnittsverbrauch:</string>
     <string name="drivenKm_text">Kilometer gefahren:</string>
     <string name="overallCosts_text">Kosten:</string>
+    <string name="xmlExport_text">Status XML-Export:</string>
+    <string name="cloudExport_text">Status Cloud-Export:</string>
     
 	<string name="car_input_header">Fahrzeugdaten eingeben</string>
 	<string name="car_type_header">Fahrzeugtyp eingeben:</string>
