- fixed Google Drive upload - fixed import from XML files - code formatting of all classes
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@11 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <!-- menu action labels -->
     <string name="action_view_cars">Fahrzeuge anzeigen</string>
     <string name="action_add_car">Fahrzeug hinzufügen</string>
+    <string name="action_import_car">Fahrzeugdatensatz importieren</string>
     <string name="action_import_data">Daten importieren</string>
     <string name="action_export_data">Daten exportieren</string>
     <string name="action_edit">Bearbeiten</string>
