Switched import activity to swipe tab activity
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@36 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="action_add_picture">Fahrzeugbild laden</string>
     <string name="action_quit">Beenden</string>
 
+	<string name="actionbar_local">Lokal</string>
+    <string name="actionbar_remote">Google Drive</string>
+	
     <!--  -->
 
     <string name="car_input_name">Fahrzeug hinzufügen</string>
