Added drawer menu and changed car list to recyclerview.
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/branches/material@59 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -107,4 +107,7 @@
     <string name="brand_toyota">Toyota</string>
     <string name="brand_vw">Volkswagen</string>
 
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 </resources>
