Use dialog fragment for date picker.
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/branches/material@82 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,9 @@
     <string name="action_add_picture">Fahrzeugbild laden</string>
     <string name="action_quit">Beenden</string>
 
-	<string name="actionbar_local">Lokal</string>
+    <string name="actionbar_local">Lokal</string>
     <string name="actionbar_remote">Google Drive</string>
-	
+
     <!--  -->
 
     <string name="car_input_name">Fahrzeug hinzufügen</string>
@@ -109,5 +109,9 @@
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="cons_date_hint">Tankdatum</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
