Add hyundai brand

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="brand_mercedes">Daimler-Benz</string>
     <string name="brand_ford">Ford</string>
     <string name="brand_honda">Honda</string>
+    <string name="brand_hyundai">Hyundai</string>
     <string name="brand_mazda">Mazda</string>
     <string name="brand_nissan">Nissan</string>
     <string name="brand_porsche">Porsche</string>
